# gcp-speech-api-example

./: Cargo.toml  README.md
src/: main.rs  main_openai.rs
