[package]
name = "gemini-test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
cpal = "0.16.0"
futures-util = "0.3.31"
googleapis-tonic-google-cloud-speech-v2 = "0.33.0"
http = "1.3.1"
rustls = { version = "0.23.40", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tonic = { version = "0.14.2", features = ["tls-native-roots"] }
